# pazusoba-android

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
project/: settings.gradle
project/app/: build.gradle
project/app/src/androidTest/java/org/github/henryquan/pazusoba_android/: ExampleInstrumentedTest.kt
project/app/src/main/: AndroidManifest.xml
project/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pazusoba_android.cpp
project/app/src/main/java/org/github/henryquan/pazusoba_android/: MainActivity.kt
project/app/src/main/java/org/github/henryquan/pazusoba_android/core/: Pazusoba.kt  Route.kt
project/app/src/main/java/org/github/henryquan/pazusoba_android/extensions/: ViewExtensions.kt
project/app/src/main/res/layout/: activity_main.xml
project/app/src/main/res/values/: strings.xml  themes.xml
project/app/src/main/res/values-night/: themes.xml
project/app/src/test/java/org/github/henryquan/pazusoba_android/: ExampleUnitTest.kt
project/gradle/wrapper/: gradle-wrapper.properties
